kubernetes/frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: techcast-demo
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
