kubernetes/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: techcast-demo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - siamand.chat-demo.devel.techcast.cloud
      secretName: techcast-demo-tls
  rules:
    - host: siamand.chat-demo.devel.techcast.cloud
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - pathType: Prefix
            path: "/rta"
            backend:
              service:
                name: backend
                port:
                  number: 3000
